# cowbump

./: .gitignore  Cargo.toml  KEYBINDS.md  README.md  clippy.toml  version.txt
design/: considerations.md  data-format.md  filter-string.md  overview.md  ui.md
scripts/: addtest.rs
src/: application.rs  collection.rs  db.rs  entry.rs  entry_utils.rs  filter_reqs.rs  filter_spec.rs  folder_scan.rs  gui.rs  main.rs  preferences.rs  recently_used_list.rs  sequence.rs  serialization.rs  set_ext.rs  tag.rs
src/db/: global.rs  local.rs  serialization.rs
src/gui/: debug.rs  debug_log.rs  dialog.rs  egui_ui.rs  entries_view.rs  mod.rs  native_dialog.rs  open.rs  resources.rs  text_edit.rs  thumbnail_loader.rs  thumbnails_view.rs  util.rs  viewer.rs
src/gui/egui_ui/: batch_rename_window.rs  changes_window.rs  coll_prefs_window.rs  collections_window.rs  debug_window.rs  entries_window.rs  filter_popup.rs  find_popup.rs  icons.rs  load_folder_window.rs  modal.rs  preferences_window.rs  query_popup.rs  sequences.rs  tag_autocomplete.rs  tag_list.rs  tag_specific_apps_window.rs  top_bar.rs  ui_ext.rs
src/gui/open/: builtin.rs  external.rs
src/util/: string.rs
