[package]
name = "cowbump"
version = "0.3.0-dev"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
edition = "2024"

[dependencies]
walkdir = "2.5.0"
serde = "1.0.200"
serde_derive = "1.0.200"
rmp-serde = "1.3.0"
image = "0.25.6"
arboard = "3.6.0"
thiserror = "2.0"
anyhow = "1.0.82"
fnv = "1.0.7"
directories = "6.0"
open = "5.1.2"
zstd = "0.13.1"
zip = { version = "4", default-features = false }
egui-sf2g = "0.5.0"
sf2g.version = "0.4.0"
sf2g.features = ["text"]
rand = "0.9"
egui-file-dialog = "0.11.0"
parking_lot = "0.12"
egui_flex = "0.4.0"
egui_colors = "0.9"
constcat = "0.6"

[dependencies.recently_used_list]
git = "https://github.com/crumblingstatue/recently_used_list.git"

[dependencies.tagfilter-lang]
git = "https://github.com/crumblingstatue/tagfilter-lang.git"

[profile.dev]
# Leaner target/ directory, but still provides backtrace info
debug = "line-tables-only"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"

[profile.dev.package."*"]
opt-level = 2
